--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,29 @@
     <script src="scripts/main.js" defer></script>
   </head>
   <body>
+    <section class="slider">
+      <label class="label" for="min-input">Min:</label>
+      <input
+        type="number"
+        name="min-input"
+        id="min-input"
+      >
+      <br>
+      <label class="label" for="max-input">Max:</label>
+      <input
+        type="number"
+        name="min-input"
+        id="max-input"
+      >
+
+      <div class="slider__wrapper">
+        <div class="slider__ruler">
+          <div class="slider__fill"></div>
+          <div class="slider__thumb"></div>
+          <div class="slider__tooltip">100</div>
+        </div>
+      </div>
+    </section>
 
   </body>
 </html>
