--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,8 @@
       <div class="slider__wrapper">
         <div class="slider__ruler">
           <div class="slider__fill"></div>
-          <div class="slider__thumb"></div>
+          <div class="slider__thumb slider__thumb--min"></div>
+          <div class="slider__thumb slider__thumb--max"></div>
           <div class="slider__tooltip">100</div>
         </div>
       </div>
